<resources>
    <string name="app_name">Fitness Studio</string>
    
    <!-- Login Screen -->
    <string name="sign_in">Sign In</string>
    <string name="welcome_message">Hi there! Nice to see you again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_use_social">or use one of your social profiles</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    
    <!-- Registration Screen -->
    <string name="user_creation">User Creation</string>
    <string name="names">Names</string>
    <string name="last_names">Last Names</string>
    <string name="user">User</string>
    <string name="address">Address</string>
    <string name="terms_agreement">I agree to the Terms of Services and Privacy Policy.</string>
    <string name="continue_btn">Continue</string>
    
    <!-- Main Screen -->
    <string name="main">Main</string>
    
    <!-- Muscle Selection Screen -->
    <string name="groups">Groups</string>
    <string name="choose_exercise">Choose the exercise</string>
    
    <!-- Exercise Management -->
    <string name="insert_new_exercise">Insert the new Exercise</string>
    <string name="insert_change">Insert the change</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    
    <!-- Training Screen -->
    <string name="selected_muscle">Selected muscle</string>
    <string name="low_weight">Low Weight</string>
    <string name="height_weight">Height Weight</string>
    <string name="last_weight">Last Weight</string>
    <string name="actual_weight">Actual Weight</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="notes">Notes</string>
    <string name="insert">Insert</string>
    <string name="history">History</string>
    
    <!-- History and Performance -->
    <string name="performance">Performance</string>
    <string name="current_week">Current Week</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="back_routine">Back Routine</string>
    
    <!-- Common -->
    <string name="placeholder">Placeholder</string>
    <string name="company_name">Company Name</string>
    <string name="kg">Kg</string>
    <string name="date">Date</string>
    <string name="weight">Weight (kg)</string>
</resources>